--- a/player-setup.html
+++ b/player-setup.html
@@ -76,12 +76,50 @@
         <div class="content-area">
             <h1 class="screen-title">👥 Spieler hinzufügen</h1>
 
+            <!-- ✅ P1 UI/UX: Fortschritts-Bar -->
+            <div class="progress-section" role="progressbar" aria-valuenow="1" aria-valuemin="1" aria-valuemax="3" aria-label="Setup-Fortschritt">
+                <div class="progress-steps">
+                    <div class="progress-step active" data-step="1">
+                        <div class="step-number">1</div>
+                        <div class="step-label">Spieler</div>
+                    </div>
+                    <div class="progress-connector"></div>
+                    <div class="progress-step" data-step="2">
+                        <div class="step-number">2</div>
+                        <div class="step-label">Details</div>
+                    </div>
+                    <div class="progress-connector"></div>
+                    <div class="progress-step" data-step="3">
+                        <div class="step-number">3</div>
+                        <div class="step-label">Start</div>
+                    </div>
+                </div>
+                <div class="progress-bar-container">
+                    <div class="progress-bar" id="progress-bar" style="width: 33%"></div>
+                </div>
+            </div>
+
             <div class="glass-card">
                 <div class="game-mode-reminder" role="status">
                     <span class="mode-icon" aria-hidden="true">📱</span>
                     <div class="mode-text">
                         <strong>Ein Gerät Modus</strong><br>
                         Das Handy wird zwischen den Spielern weitergegeben
+                    </div>
+                </div>
+
+                <!-- ✅ P1 DSGVO: Datenschutz-Hinweis -->
+                <div class="privacy-notice" role="note" aria-labelledby="privacy-notice-title">
+                    <div class="privacy-notice-icon" aria-hidden="true">🔒</div>
+                    <div class="privacy-notice-content">
+                        <strong id="privacy-notice-title">Datenschutz-Hinweis</strong>
+                        <p>
+                            Dein Name wird nur lokal auf diesem Gerät gespeichert und nach dem Spiel automatisch gelöscht.
+                            Avatare werden auf Firebase Storage hochgeladen und nach 24 Stunden automatisch gelöscht.
+                            <a href="privacy.html" target="_blank" rel="noopener" class="privacy-link-inline">
+                                Mehr erfahren
+                            </a>
+                        </p>
                     </div>
                 </div>
 
@@ -107,6 +145,8 @@
                     <div class="players-input-list" id="players-input-list" role="list" aria-labelledby="player-input-heading" aria-describedby="player-name-help">
                         <div class="player-input-row" role="listitem">
                             <label for="player-input-0" class="player-number">1</label>
+
+                            <!-- Name Input -->
                             <input
                                 type="text"
                                 id="player-input-0"
@@ -119,10 +159,50 @@
                                 aria-describedby="player-name-help"
                                 aria-required="true"
                                 autocomplete="off">
+
+                            <!-- ✅ P1 UI/UX: Avatar Upload (Optional) -->
+                            <div class="avatar-upload-section" id="avatar-section-0">
+                                <input
+                                    type="file"
+                                    id="avatar-input-0"
+                                    class="avatar-input sr-only"
+                                    accept="image/jpeg,image/png,image/webp"
+                                    data-index="0"
+                                    aria-label="Avatar für Spieler 1 hochladen (optional)">
+                                <label for="avatar-input-0" class="avatar-upload-btn" tabindex="0" role="button">
+                                    <span class="avatar-icon" aria-hidden="true">📷</span>
+                                    <span class="avatar-text">Avatar</span>
+                                </label>
+                                <div class="avatar-preview hidden" id="avatar-preview-0">
+                                    <img src="" alt="Avatar Vorschau" class="avatar-image" id="avatar-image-0">
+                                    <button type="button" class="avatar-remove-btn" data-index="0" aria-label="Avatar entfernen">
+                                        <span aria-hidden="true">×</span>
+                                    </button>
+                                </div>
+                            </div>
+
+                            <!-- ✅ P1 DSGVO/Jugendschutz: Alterscheck -->
+                            <div class="age-check-section" id="age-check-0">
+                                <label for="age-input-0" class="age-label">Alter:</label>
+                                <input
+                                    type="number"
+                                    id="age-input-0"
+                                    class="age-input"
+                                    min="6"
+                                    max="99"
+                                    placeholder="18"
+                                    data-index="0"
+                                    aria-label="Alter von Spieler 1"
+                                    aria-required="false">
+                            </div>
+
                             <button class="remove-player-btn hidden" data-index="0" type="button" aria-label="Spieler 1 entfernen">×</button>
                         </div>
+
                         <div class="player-input-row" role="listitem">
                             <label for="player-input-1" class="player-number">2</label>
+
+                            <!-- Name Input -->
                             <input
                                 type="text"
                                 id="player-input-1"
@@ -135,8 +215,54 @@
                                 aria-describedby="player-name-help"
                                 aria-required="true"
                                 autocomplete="off">
+
+                            <!-- ✅ P1 UI/UX: Avatar Upload (Optional) -->
+                            <div class="avatar-upload-section" id="avatar-section-1">
+                                <input
+                                    type="file"
+                                    id="avatar-input-1"
+                                    class="avatar-input sr-only"
+                                    accept="image/jpeg,image/png,image/webp"
+                                    data-index="1"
+                                    aria-label="Avatar für Spieler 2 hochladen (optional)">
+                                <label for="avatar-input-1" class="avatar-upload-btn" tabindex="0" role="button">
+                                    <span class="avatar-icon" aria-hidden="true">📷</span>
+                                    <span class="avatar-text">Avatar</span>
+                                </label>
+                                <div class="avatar-preview hidden" id="avatar-preview-1">
+                                    <img src="" alt="Avatar Vorschau" class="avatar-image" id="avatar-image-1">
+                                    <button type="button" class="avatar-remove-btn" data-index="1" aria-label="Avatar entfernen">
+                                        <span aria-hidden="true">×</span>
+                                    </button>
+                                </div>
+                            </div>
+
+                            <!-- ✅ P1 DSGVO/Jugendschutz: Alterscheck -->
+                            <div class="age-check-section" id="age-check-1">
+                                <label for="age-input-1" class="age-label">Alter:</label>
+                                <input
+                                    type="number"
+                                    id="age-input-1"
+                                    class="age-input"
+                                    min="6"
+                                    max="99"
+                                    placeholder="18"
+                                    data-index="1"
+                                    aria-label="Alter von Spieler 2"
+                                    aria-required="false">
+                            </div>
+
                             <button class="remove-player-btn hidden" data-index="1" type="button" aria-label="Spieler 2 entfernen">×</button>
                         </div>
+                    </div>
+
+                    <!-- ✅ P0 SECURITY: Avatar Upload Info -->
+                    <div class="upload-info" role="note">
+                        <span class="info-icon" aria-hidden="true">ℹ️</span>
+                        <small>
+                            Avatare: Max. 2MB, nur JPG/PNG/WEBP erlaubt.
+                            Werden nach 24h automatisch gelöscht.
+                        </small>
                     </div>
 
                     <!-- Add Player Button -->
@@ -199,8 +325,16 @@
 
                 <!-- Privacy Footer -->
                 <div class="privacy-footer">
-                    <a href="privacy.html" class="privacy-link">
+                    <a href="privacy.html" target="_blank" rel="noopener" class="privacy-link">
                         Datenschutzerklärung
+                    </a>
+                    <span class="footer-separator" aria-hidden="true">•</span>
+                    <a href="privacy.html#jugendschutz" target="_blank" rel="noopener" class="privacy-link">
+                        Jugendschutz
+                    </a>
+                    <span class="footer-separator" aria-hidden="true">•</span>
+                    <a href="imprint.html" target="_blank" rel="noopener" class="privacy-link">
+                        Impressum
                     </a>
                 </div>
             </div>
